# podcastAINews

./: .gitignore  README.md  main.py  podcastAINews_colab.ipynb  pyproject.toml  requirements.txt
config/: config.yaml
src/: audio_generator.py  news_fetcher.py  script_generator.py
